--- a/app/views/concepts/_form.html.erb
+++ b/app/views/concepts/_form.html.erb
@@ -13,9 +13,7 @@
   <% end %>
 
   <header class="row-fluid">
-    <div class="col-md-offset-2 col-md-7 col-xs-offset-1 col-xs-10">
-      <h4 class="title"><%= f.text_field :name, placeholder: 'Topic', autofocus: true %></h4>  
-    </div>
+    <h4 class="title"><%= f.text_field :name, placeholder: 'Topic', autofocus: true, class: "resizable col-lg-offset-2 col-lg-10 col-md-offset-2 col-md-8 col-xs-offset-1 col-xs-10" %></h4>  
   </header>
 
 
