--- a/app/views/concepts/index.html.erb
+++ b/app/views/concepts/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Concepts</h1>
 
-<table>
+<table id="table-concepts">
   <thead>
     <tr>
       <th>Name</th>
@@ -14,11 +14,8 @@
   <tbody>
     <% @concepts.each do |concept| %>
       <tr>
-        <td><%= concept.name %></td>
-        <td><%= concept.definition %></td>
-        <td><%= link_to 'Show', concept %></td>
-        <td><%= link_to 'Edit', edit_concept_path(concept) %></td>
-        <td><%= link_to 'Destroy', concept, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to concept.name, concept %></td>
+        <td><%= concept.definition[0..50] %></td>
       </tr>
     <% end %>
   </tbody>
@@ -27,3 +24,9 @@
 <br>
 
 <%= link_to 'New Concept', new_concept_path %>
+
+<script>
+$(document).ready(function(){
+    $('#table-concepts').DataTable();
+});
+</script>
